--- a/README.adoc
+++ b/README.adoc
@@ -20,3 +20,9 @@ conda create -n poiExtraction-env -c conda-forge -y python=3.12 scikit-learn num
 conda activate poiExtraction-env
 ----
 
+.Package Installation via Conda
+[source, bash]
+----
+conda create -n pipe-extraction -c conda-forge python=3.13 laspy scikit-image scikit-learn matplotlib numpy -y
+conda activate pipe-extraction
+----
