--- a/README.adoc
+++ b/README.adoc
@@ -1,22 +1,143 @@
-= pipe-vector-extractor
+= Pipe-Extractor
 
-Extraction and evaluation of pipe segments and pipe components from classified point clouds.
+Extraction of pipes and pipe components from classified pointclouds.
 
-== Project overview
+ifdef::env-github[]
+[source,mermaid]
+----
+flowchart LR
+  %% ===== Styles =====
+  classDef external stroke-width:1px,stroke-dasharray: 10 5;
+  classDef header fill:#fff,stroke-width:1.5px;
+  classDef normal stroke-width:1px;
 
-* **Pipe extraction** through Hough-based slicing, clustering, and snapping: see link:pipe_extraction/pipe_extraction_hough_parallel.py[`pipe_extraction.pipe_extraction_hough_parallel.extract_pipes`].
-* **Pipe component extraction** in pipe neighbourhoods: link:pipeComponent_extraction/pipeComponentExtraction.py[`pipeComponent_extraction.pipeComponentExtraction.extract_pipeComponents`].
-* **Evaluation & visualization** of metrics, plots, and OBJ/GeoJSON exports orchestrated by link:main.py[`main.main`].
+  %% ===== Inputs =====
+  I1["Predicted pointclouds\n(Label: Pipe)"]
+  I3["Predicted pointclouds\n(Label: Component)"]
 
-[cols="1,3",options="header"]
+  %% ===== Phase 1 (group) =====
+  subgraph P1["Phase 1: Pipe instance detection"]
+    direction TB
+    P1a["Phase 1a: Slice hough search"]
+    P1b["Phase 1b: Slice clustering & merging"]
+    P1c["Phase 1c: Global clustering & merging"]
+    P1a --> P1b --> P1c
+  end
+
+  %% ===== Phase 2 =====
+  P2["Phase 2:\nPipe instance finetuning"]
+
+  %% ===== Phase 3 =====
+  P3["Phase 3:\nComponent detection"]
+
+  %% ===== Output ======
+  J["final component instances"]
+  O["Geodatenserver"]
+
+  %% ===== Flow + edge labels =====
+  I1 --> P1
+  P1 -->|approximated\npipe instances| P2
+  P2 -->|final\npipe instances| P3
+  I3 --> P3
+  P2 -->|final\npipe instances| J
+  P3 --> J
+  J -->|.geojson| O
+
+  %% ===== Class assignments =====
+  class I1,I3,O external
+  class P1a,P1b,P1c,P2,P3 normal
+----
+endif::[]
+
+ifndef::env-github[]
+[mermaid]
+----
+flowchart LR
+  %% ===== Styles =====
+  classDef external stroke-width:1px,stroke-dasharray: 10 5;
+  classDef header fill:#fff,stroke-width:1.5px;
+  classDef normal stroke-width:1px;
+
+  %% ===== Inputs =====
+  I1["Predicted pointclouds\n(Label: Pipe)"]
+  I3["Predicted pointclouds\n(Label: Component)"]
+
+  %% ===== Phase 1 (group) =====
+  subgraph P1["Phase 1: Pipe instance detection"]
+    direction TB
+    P1a["Phase 1a: Slice hough search"]
+    P1b["Phase 1b: Slice clustering & merging"]
+    P1c["Phase 1c: Global clustering & merging"]
+    P1a --> P1b -->|"{Σ}"| P1c
+  end
+
+  %% ===== Phase 2 =====
+  P2["Phase 2:\nPipe instance finetuning"]
+
+  %% ===== Phase 3 =====
+  P3["Phase 3:\nPipe component detection"]
+
+  %% ===== Output ======
+  J["final features"]
+  O["Geodatenserver"]
+
+  %% ===== Flow + edge labels =====
+  I1 --> P1
+  P1 -->|approximated\npipe instances| P2
+  P2 -->|final\npipe instances| P3
+  I3 --> P3
+  P2 -->|final\npipe instances| J
+  P3 -->|final\npipe components| J
+  J -->|.geojson| O
+
+  %% ===== Class assignments =====
+  class I1,I3,O external
+  class P1a,P1b,P1c,P2,P3 normal
+----
+endif::[]
+
+.Where to find what
+[cols="1,2,2",options="header"]
 |===
-| Stage | Description
-| Preprocessing | Load point cloud, initialise output directories (`prepare_output_directory` in link:util.py[`util.py`]).
-| Phase 1: Approximation | Slice in Z, detect lines via Hough (`find_lines_in_slice` in link:pipe_extraction/calcSlice.py[`pipe_extraction/calcSlice.py`]).
-| Phase 1b: Clustering & merging | Cluster Hough segments with DBSCAN (`cluster_segments`), merge segments (`merge_segments_in_clusters`).
-| Phase 2: Snapping | Refine approximated pipes against raw points (`snap_segments_to_point_cloud_data_parallel`).
-| Components | Use pipes to guide component clustering (`extract_pipeComponents`).
-| Evaluation | Measure coverage and error (`pipeEval`, `componentEval`), render visualisations.
+| Stage | Description | Functions
+
+| Phase 1: Pipe instance detection 
+| Takes xyz points with label `Pipe` and returns approximated pipe instances.
+| 
+link:pipe_extraction/pipe_extraction_hough_parallel.py[`extract_pipes()`] +
+link:pipe_extraction/parallel_slices.py[`worker_process_slice()`]
+
+| Phase 1a: Pipe instance detection 
+| Slice pointcloud in Z and detect lines via 2D-Hough.
+| link:pipe_extraction/calcSlice.py[`find_lines_in_slice()`]
+
+| Phase 1b: Slice clustering & merging 
+| For every Slice cluster Hough segments with DBSCAN and merge segments. 
+| 
+link:pipe_extraction/clustering_hough.py[`cluster_segments()`] +
+link:pipe_extraction/merge_segments.py[`merge_segments_in_clusters()`]
+
+| Phase 1c: Clustering & merging 
+| For all segments in all slices cluster Hough segments with DBSCAN and merge segments. 
+|
+link:pipe_extraction/clustering_hough.py[`cluster_segments()`] +
+link:pipe_extraction/merge_segments.py[`merge_segments_in_clusters()`] 
+
+| Phase 2: Finetuning (Snapping) 
+| Refine approximated pipes against raw points. 
+| 
+link:pipe_extraction/parallel_snapping.py[`snap_segments_to_point_cloud_data_parallel()`] +
+link:pipe_extraction/snapToPipe.py[`process_single_segment()`]
+
+| Phase 3: Components 
+| Takes xyz points with label `Component` (and found pipes) to cluster and detect pipe components. 
+| link:pipeComponent_extraction/pipeComponentExtraction.py[`extract_pipeComponents()`]
+
+| (Evaluation) 
+| Measure coverage and error (`pipeEval`, `componentEval`), render visualisations. 
+| 
+link:eval/pipeEval.py[`pipeEval()`] +
+link:eval/componentEval.py[`componentEval()`] 
 |===
 
 == Installation and usage
